# pwsh-autoupdate

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: autotag.yml  ci.yml  release.yml
docs/: PRD.md  design.md
docs/adr/: 0001-update-existing-only-scope.md  0002-check-exit-code-contract.md  0003-prerelease-handling-stable-only.md  0004-multiple-install-method-resolution.md  0005-technology-stack-and-dependencies.md  0006-install-when-missing.md  0007-uninstall-via-owning-channel.md  README.md
pkg/scoop/: pwsh-autoupdate.json
scripts/: gen-manifests.sh
src/: app.rs  cli.rs  lib.rs  main.rs
src/adapters/: http.rs  mod.rs  portable.rs  probe.rs  runner.rs
src/core/: detect.rs  error.rs  mod.rs  plan.rs  portable.rs  report.rs  version.rs
tests/: cli.rs
