[package]
name = "pwsh-autoupdate"
version = "0.3.1"
edition = "2021"
description = "Detects how PowerShell was installed and updates it via the owning package manager."
license = "MIT OR Apache-2.0"

[[bin]]
name = "pwsh-autoupdate"
path = "src/main.rs"

[dependencies]
clap        = { version = "4.6",  features = ["derive"] }
serde       = { version = "1.0",  features = ["derive"] }
serde_json  = "1.0"
semver      = "1.0"
anyhow      = "1.0"
thiserror   = "2.0"
ureq        = "3.3"
sha2        = "0.11"
flate2      = "1.1"
tar         = "0.4"

[dev-dependencies]
mockito     = "1.7"
assert_cmd  = "2.0"
predicates  = "3.1"
tempfile    = "3.27"
